Added configuration entry for PHP Opcache

--- a/etc/newrelic/newrelic-plugin-agent.cfg
+++ b/etc/newrelic/newrelic-plugin-agent.cfg
@@ -105,6 +105,14 @@ Application:
   #    path: /fpm_status
   #    query: json
 
+  #php_opc:
+  #   name: hostname
+  #   scheme: http
+  #   host: localhost
+  #   verify_ssl_cert: true
+  #   port: 80
+  #   path: /opc-nrp.php
+
   #postgresql:
   #  host: localhost
   #  port: 5432
