Added PowerDNS recursor agent
The PowerDNS recursor (>v.3.6) has an awesome built-in JSON API with a
multitude of server metrics. This plugin can easily be adapter to work
with the PowerDNS Authoritative name server as well (The only
difference are the available metrics).
Reference: http://doc.powerdns.com/md/httpapi/README/

--- a/etc/newrelic/newrelic-plugin-agent.cfg
+++ b/etc/newrelic/newrelic-plugin-agent.cfg
@@ -84,6 +84,14 @@ Application:
   #  verify_ssl_cert: true
   #  path: /nginx_stub_status
 
+  #pdns_recursor:
+  #  - name: hostname
+  #    scheme: http
+  #    host: localhost
+  #    port: 8082
+  #    path: /servers/localhost/statistics
+  #    password: pass
+
   #pgbouncer:
   #  host: localhost
   #  port: 6000
@@ -104,14 +112,6 @@ Application:
   #    port: 443
   #    path: /fpm_status
   #    query: json
-
-  #php_opc:
-  #   name: hostname
-  #   scheme: http
-  #   host: localhost
-  #   verify_ssl_cert: true
-  #   port: 80
-  #   path: /opc-nrp.php
 
   #postgresql:
   #  host: localhost
